   - 'verbose-exit' is now 'debug/verbose-exit'
   - 'simix/breakpoint' is now 'debug/breakpoint'
   - 'clean-atexit' is now 'debug/clean-atexit'
 - Removed all that was related to the "Storage" type in all APIs and bindings.
   "Disks" have been introduced more than a year ago to replace them for the better.
   It's time to finish this replacement.

S4U:
 - Define new template functions Mailbox::get_unique(), returning a std::unique_ptr.
 - Functions Mailbox::get() and Mailbox::get_async() are now templated with the
   type of the pointee. Untyped functions are deprecated. Use Mailbox::get<void>()
   or Mailbox::get_async<void>() if you really want to play with void*.
 - Unify the interface of Activity::on_{start/activity}
 - New function: Comm::get_dst_data()
 - New function: Comm::set_payload_size() to set the amount of bytes to simulate.
 - New functions: Comm::sendto_{init,async} to initiate a communication
   on between two (possibly remote) hosts.

XBT:
 - Drop simgrid::xbt::demangle(). Please use boost::core::demangle() instead.
 - Drop xbt_dynar_cursor_rm(), xbt_dynar_search_or_negative(),
   xbt_str_split_quoted(), xbt_str_split_quoted_in_place().
 - Deprecate xbt_dynar_to_array().

C binding and interface:
 - Rename (lowercase) functions sg_actor_get_PID, sg_actor_get_PPID, sg_actor_by_PID.

Documentation:
 - New section: Configuring the logs from the command line.
 - New section: Programming API of logs.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
- FG#37: Parallel tasks are limited to 1 core per host
- FG#62: Running "smpirun -replay" on large networks
- GH#343: Wrong consumed energy when an exec timeouts

----------------------------------------------------------------------------

SimGrid (3.26) December 15. 2020

The Release release (the French lockdown was eased today).

Important user-visible changes:
 - SimGrid now requires a compiler with C++14 support.